--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<h1>Job App Form</h1>
-	<form action="#" method="Post">
+	<form action="#" method="post">
 		<div>
 			<label for="name">Name*</label><br>
 			<input type="text" name="name" id="name" placeholder="write your name" required>
@@ -32,7 +32,7 @@
 		</div><br>
 		<div>
 			<label for="age">Age*</label>
-			<input type="number" name="age" id="id" placeholder="write down your age" required>
+			<input type="number" name="age" id="age" placeholder="write down your age" required>
 		</div><br>
 		<div>
 			<label for="dob">DOB*</label>
