--- a/main.html
+++ b/main.html
@@ -24,7 +24,7 @@
 		</div><br>
 		<div>
 			<label for="laptop">Laptop Brands</label>
-			<select name="options" id="#laptop">
+			<select name="options" id="laptop">
 				<option value="Apple" name="laptop">Apple</option>
 				<option value="Asus" name="laptop">Asus</option>
 				<option value="HP" name="laptop">HP</option>
