--- a/main.html
+++ b/main.html
@@ -24,10 +24,10 @@
 		</div><br>
 		<div>
 			<label for="laptop">Laptop Brands</label>
-			<select name="options" id="laptop">
-				<option value="Apple" name="laptop">Apple</option>
-				<option value="Asus" name="laptop">Asus</option>
-				<option value="HP" name="laptop">HP</option>
+			<select name="options">
+				<option value="Apple" name="laptop" id="laptop_f">Apple</option>
+				<option value="Asus" name="laptop" id="laptop_m">Asus</option>
+				<option value="HP" name="laptop" id="laptop_e">HP</option>
 			</select>	
 		</div><br>
 		<div>
