--- a/main.html
+++ b/main.html
@@ -25,9 +25,9 @@
 		<div>
 			<label for="laptop">Laptop Brands</label>
 			<select name="options">
-				<option value="Apple" name="laptop" id="laptop_f">Apple</option>
-				<option value="Asus" name="laptop" id="laptop_m">Asus</option>
-				<option value="HP" name="laptop" id="laptop_e">HP</option>
+				<option value="Apple" name="laptop" id="laptop">Apple</option>
+				<option value="Asus" name="laptop" id="laptop">Asus</option>
+				<option value="HP" name="laptop" id="lapto">HP</option>
 			</select>	
 		</div><br>
 		<div>
