--- a/main.html
+++ b/main.html
@@ -47,7 +47,7 @@
 			<input type="url" name="portfolio" id="portfolio" placeholder="provide you portfolio link">
 		</div><br>
 		<div>
-			<button>submit button</button>
+			<input type="submit" value="Submit">
 		</div>
 		<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
