--- a/main.html
+++ b/main.html
@@ -47,7 +47,7 @@
 			<input type="url" name="portfolio" id="portfolio" placeholder="provide you portfolio link">
 		</div><br>
 		<div>
-			<input type="submit" value="submit button">
+			<button type="submit">submit</button> 
 		</div>
 		<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
